--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "yuganindustries",
+  "name": "yugan1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "emailjs-com": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-player": "^2.16.0",
@@ -14,7 +14,6 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.1.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
