--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "yugan1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
+  "homepage": "https://jayasuriyacs.github.io/Demopage1/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -39,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
