--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "yugan1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jayasuriyacs.github.io/Demopage1",
+  "homepage": "http://yuganindustries.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
